[tool.poetry]
name = "nvsmi"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
bump2version = "^0.5.10"

[tool.poetry.scripts]
nvsmi = 'nvsmi:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
