[tool.poetry]
name = "nvsmi"
version = "0.4.1"
description = "A (user-)friendly wrapper to nvidia-smi"
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pmav99/nvsmi"
documentation = "https://github.com/pmav99/nvsmi"
keywords = ["packaging", "dependency", "poetry"]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
bump2version = "^0.5.10"

[tool.poetry.scripts]
nvsmi = 'nvsmi:_main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
